refactor: Migrate to Java 17 from Java 8 through 16
Co-authored-by: Moderne <team@moderne.io>