@@ -98,8 +98,8 @@ public class GemFireAsLastResourceConnectionAcquiringAspectUnitTests {
 		verify(aspect, times(1)).resolveGemFireJcaResourceAdapterJndiName();
 		verify(mockGemFireConnectionFactory, times(1)).getConnection();
 		verify(mockLogger, times(1))
-			.trace(eq(String.format("Acquiring GemFire Connection from GemFire JCA ResourceAdapter registered at [%s]...",
-				GemFireAsLastResourceConnectionAcquiringAspect.DEFAULT_GEMFIRE_JCA_RESOURCE_ADAPTER_JNDI_NAME)));
+			.trace(eq("Acquiring GemFire Connection from GemFire JCA ResourceAdapter registered at [%s]...".formatted(
+			GemFireAsLastResourceConnectionAcquiringAspect.DEFAULT_GEMFIRE_JCA_RESOURCE_ADAPTER_JNDI_NAME)));
 	}
 
 	@Test
